<resources>
    <string name="app_name">AppGasEta</string>
    <string name="txt_titulo">Gasolina x Etanol</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do Curso Desejado</string>
    <string name="txt_hint_edit_telefone_contato">Telefone de Contato</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
    <string name="selecione_um_curso">Selecione um curso</string>
    <string name="txt_button_calcular">CALCULAR</string>
    <string name="gasolina">Gasolina</string>
    <string name="txt_hint_edit_gasolina">R$ Litro/Gasolina</string>
    <string name="txt_hint_edit_etanol">R$ Litro/Etanol</string>
    <string name="editetanol">Etanol</string>
    <string name="txt_hint_edit_resultado">Resultado</string>
    <string name="txt_resultado">RESULTADO</string>
</resources>